--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,14 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
 # Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.20.1
-	yarn_mappings=1.20.1+build.10
-	loader_version=0.14.22
-
+# check these on https://modmuss50.me/fabric.html
+minecraft_version=1.21
+yarn_mappings=1.21+build.2
+loader_version=0.15.11
 # Mod Properties
-	mod_version = 1.0
-	maven_group = eu.reinalter.noah
-	archives_base_name = clear-fix
-
+mod_version=1.1
+maven_group=eu.reinalter.noah
+archives_base_name=clear-fix
 # Dependencies
-	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.88.1+1.20.1
+# check this on https://modmuss50.me/fabric.html
+fabric_version=0.100.3+1.21
