--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.21
 yarn_mappings=1.21+build.2
 loader_version=0.15.11
 # Mod Properties
-mod_version=1.2
+mod_version=1.2.1+mc1.21
 maven_group=eu.reinalter.noah
 archives_base_name=clear-fix
 # Dependencies
